# cpp-projects

./: CMakeLists.txt  ball.cpp
3dSurface/: CMakeLists.txt  README.md
3dSurface/include/: camera.hpp  cube.hpp  eventloop.hpp  object.hpp  quad.hpp  renderer.hpp  scene.hpp  window.hpp
3dSurface/source/: camera.cpp  cube.cpp  eventloop.cpp  main.cpp  quad.cpp  renderer.cpp  scene.cpp  window.cpp
Molecula/: CMakeLists.txt
Molecula/include/: CoreHandlerSDL.hpp  ICoreHandler.hpp  Object.hpp  Program.hpp  Quad.hpp  Sphere.hpp  classes.hpp
Molecula/source/: CoreHandlerSDL.cpp  Program.cpp  Quad.cpp  Sphere.cpp  main.cpp
cube/: CMakeLists.txt  README.md  cube.cpp
eduQT/1/: CMakeLists.txt  main.cpp
eduQT/10/: CMakeLists.txt  main.cpp
eduQT/11/: CMakeLists.txt  main.cpp
eduQT/12/: CMakeLists.txt  main.cpp
eduQT/13/: CMakeLists.txt  Calculator.cpp  Calculator.hpp  main.cpp
eduQT/14/: CMakeLists.txt  main.cpp
eduQT/15/: CMakeLists.txt  main.cpp  res.qrc
eduQT/16/: CMakeLists.txt  main.cpp
eduQT/17/: CMakeLists.txt  Progress.cpp  Progress.hpp  main.cpp
eduQT/18 copy/: CMakeLists.txt  main.cpp
eduQT/19/: CMakeLists.txt  OGLPyramid.cpp  OGLPyramid.hpp  README.md  main.cpp
eduQT/2/: CMakeLists.txt  counter.cpp  main.cpp
eduQT/2/include/: Counter.hpp
eduQT/3/: CMakeLists.txt  main.cpp  someclass.cpp
eduQT/3/include/: SomeClass.hpp
eduQT/4/: CMakeLists.txt  main.cpp
eduQT/5/: CMakeLists.txt  main.cpp  res.qrc
eduQT/6/: CMakeLists.txt  main.cpp  res.qrc
eduQT/7/: CMakeLists.txt  main.cpp  res.qrc
eduQT/8/: CMakeLists.txt  main.cpp
eduQT/9/: CMakeLists.txt  main.cpp
include/: ball.hpp  eventloop.hpp  player.hpp
intern tasks/: main2_3.c
minesweeper/: CMakeLists.txt  README.md  example.c
minesweeper/src/: CmakeLists.txt  Game.cpp  PlayGround.cpp  main.cpp
minesweeper/src/headers/: Game.hpp  PlayGround.hpp  structures.h
startOpenGL3d/: CMakeLists.txt  README.md  main.cpp
vertex array/: CMakeLists.txt  main.cpp
vertex array/include/: arrays.h
volleyball/: CMakeLists.txt  README.md  ball.cpp  eventloop.cpp  game.cpp  main.cpp  player.cpp  render.cpp
volleyball/include/: ball.hpp  constants.hpp  eventloop.hpp  game.hpp  player.hpp  render.hpp
